# runai-agent

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  index.html  index.yaml  runai-agent-0.1.37.tgz  runai-agent-0.1.39.tgz  version.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  (+1 more)
runai-agent/: README.md  pyproject.toml
runai-agent/configs/: action-submit.yaml  direct-submit.yaml  minimal-test.yaml  workflow.yaml
runai-agent/docs/: environment_creation_guide.md
runai-agent/examples/: create_environment_example.py  failure_analysis_example.py
runai-agent/scripts/: monitor_sidecar.py
runai-agent/src/runai_agent/: query_classifier.py  register.py  template_manager.py
runai-agent/src/runai_agent/configs/: config.yml
runai-agent/src/runai_agent/functions/: __init__.py  environment_info.py  failure_analyzer.py  job_generator.py  job_status.py  job_submit.py  job_submit_batch.py  job_submit_distributed.py  job_submit_workspace.py  kubectl_troubleshoot.py  llm_smart_executor.py  proactive_monitor.py  runai_docs_helper.py  template_executor.py  workload_lifecycle.py
runai-agent/src/runai_agent/rest_api/: __init__.py  endpoint_finder.py  swagger_fetcher.py
runai-agent/src/runai_agent/templates/: README.md
runai-agent/src/runai_agent/templates/_base/: auth.j2  cluster_lookup.j2  project_lookup.j2
runai-agent/src/runai_agent/templates/datasource/: create_flat_spec.j2  create_pvc.j2  delete.j2  list.j2
runai-agent/src/runai_agent/templates/generic/: delete_by_id.j2  get_by_id.j2  list.j2
runai-agent/src/runai_agent/utils/: __init__.py  helpers.py
(+113 files in other folders)
