[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[project]
name = "runai-agent"
version = "0.1.36"
description = "RunAI Labs Agent with RAG-enhanced code search and job generation"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "nvidia-nat>=1.3.0",
    "runapy>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "nat_simple_web_query @ git+https://github.com/NVIDIA/NeMo-Agent-Toolkit.git@v1.3.1#subdirectory=examples/getting_started/simple_web_query",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[project.entry-points."nat.components"]
runai_agent = "runai_agent.register"

[tool.setuptools.packages.find]
where = ["src"]
include = ["runai_agent*"]

[tool.setuptools.package-data]
runai_agent = ["configs/*.yml", "configs/*.yaml"]
